--- a/Pipfile
+++ b/Pipfile
@@ -65,7 +65,6 @@ six = "==1.17.0"
 social-auth-app-django = "==5.4.3"
 social-auth-core = "==4.5.6"
 sqlparse = "==0.5.3"
-twisted = "==24.11.0"
 txaio = "==23.1.1"
 typing-extensions = "==4.12.2"
 tzdata = "==2025.1"
@@ -94,6 +93,7 @@ boto3 = "*"
 django-storages = {extras = ["boto3"], version = "*"}
 gunicorn = "*"
 channels-redis = "*"
+twisted = {extras = ["http2", "tls"], version = "*"}
 
 [dev-packages]
 
