--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,10 @@ Faker==37.3.0
 flower==2.0.1
 gunicorn==23.0.0
 h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
 humanize==4.12.3
+hyperframe==6.1.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
@@ -62,6 +65,7 @@ oauthlib==3.2.2
 packaging==25.0
 pillow==11.1.0
 pluggy==1.6.0
+priority==1.3.0
 prometheus_client==0.22.0
 prompt_toolkit==3.0.50
 psycogreen==1.0.2
@@ -95,7 +99,7 @@ social-auth-app-django==5.4.3
 social-auth-core==4.5.6
 sqlparse==0.5.3
 tornado==6.5.1
-Twisted==24.11.0
+twisted[http2,tls]==22.10.0
 txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2025.1
