--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ djangorestframework_simplejwt==5.5.0
 djoser==2.3.1
 dnspython==2.7.0
 drf-spectacular==0.28.0
+drf-yasg==1.21.10
 factory_boy==3.3.3
 Faker==37.3.0
 flower==2.0.1
@@ -93,7 +94,7 @@ requests-oauthlib==2.0.0
 rpds-py==0.23.1
 s3transfer==0.13.0
 service-identity==24.2.0
-setuptools==80.8.0
+setuptools==80.9.0
 six==1.17.0
 social-auth-app-django==5.4.3
 social-auth-core==4.5.6
@@ -105,7 +106,9 @@ typing_extensions==4.12.2
 tzdata==2025.1
 uritemplate==4.1.1
 urllib3==2.3.0
+uvicorn==0.34.3
 vine==5.1.0
 wcwidth==0.2.13
 websockets==15.0.1
+whitenoise==6.9.0
 zope.interface==7.2
