--- a/Pipfile
+++ b/Pipfile
@@ -10,41 +10,71 @@ attrs = "==25.3.0"
 autobahn = "==24.4.2"
 automat = "==24.8.1"
 billiard = "==4.2.1"
+boto3 = "==1.38.23"
+botocore = "==1.38.23"
 celery = "==5.4.0"
 certifi = "==2025.4.26"
 cffi = "==1.17.1"
 channels = "==4.2.2"
+channels-redis = "==4.2.1"
 charset-normalizer = "==3.4.1"
 click = "==8.1.8"
 click-didyoumean = "==0.3.1"
 click-plugins = "==1.1.1"
 click-repl = "==0.3.0"
+cloudinary = "==1.44.0"
 colorama = "==0.4.6"
 constantly = "==23.10.4"
+cron-descriptor = "==1.4.5"
 cryptography = "==44.0.2"
 daphne = "==4.1.2"
 defusedxml = "==0.7.1"
-django = "==5.1.7"
+dj-database-url = "==2.3.0"
+django-celery-beat = "==2.8.1"
+django-cloudinary-storage = "==0.3.0"
 django-cors-headers = "==4.7.0"
 django-countries = "==7.6.1"
+django-db-geventpool = "==4.0.8"
 django-debug-toolbar = "==5.2.0"
 django-filter = "==25.1"
+django-ratelimit = "==4.1.0"
+django-redis = "==5.4.0"
+django-storages = "==1.14.6"
 django-templated-mail = "==1.1.1"
+django-timezone-field = "==7.1"
 djangorestframework = "==3.16.0"
 djangorestframework-simplejwt = "==5.5.0"
 djoser = "==2.3.1"
+dnspython = "==2.7.0"
 drf-spectacular = "==0.28.0"
+drf-yasg = "==1.21.10"
+factory-boy = "==3.3.3"
+faker = "==37.3.0"
+flower = "==2.0.1"
+gunicorn = "==23.0.0"
 h11 = "==0.14.0"
+h2 = "==4.2.0"
+hpack = "==4.1.0"
+humanize = "==4.12.3"
+hyperframe = "==6.1.0"
 hyperlink = "==21.0.0"
 idna = "==3.10"
 incremental = "==24.7.2"
 inflection = "==0.5.1"
+iniconfig = "==2.1.0"
+jmespath = "==1.0.1"
 jsonschema = "==4.23.0"
 jsonschema-specifications = "==2024.10.1"
 kombu = "==5.5.0"
+msgpack = "==1.1.0"
 oauthlib = "==3.2.2"
+packaging = "==25.0"
 pillow = "==11.1.0"
+pluggy = "==1.6.0"
+priority = "==1.3.0"
+prometheus-client = "==0.22.0"
 prompt-toolkit = "==3.0.50"
+psycogreen = "==1.0.2"
 psycopg = "==3.2.9"
 psycopg2-binary = "==2.9.10"
 pyasn1 = "==0.6.1"
@@ -52,71 +82,41 @@ pyasn1-modules = "==0.4.1"
 pycparser = "==2.22"
 pyjwt = "==2.9.0"
 pyopenssl = "==25.0.0"
+pytest = "==8.3.5"
+pytest-django = "==4.11.1"
+pytest-factoryboy = "==2.7.0"
+pytest-mock = "==3.14.0"
+python-crontab = "==3.2.0"
 python-dateutil = "==2.9.0.post0"
+python-dotenv = "==1.1.0"
 python3-openid = "==3.2.0"
+pytz = "==2025.2"
 pyyaml = "==6.0.2"
 redis = "==6.1.0"
 referencing = "==0.36.2"
 requests = "==2.32.3"
 requests-oauthlib = "==2.0.0"
 rpds-py = "==0.23.1"
+s3transfer = "==0.13.0"
 service-identity = "==24.2.0"
 six = "==1.17.0"
 social-auth-app-django = "==5.4.3"
 social-auth-core = "==4.5.6"
 sqlparse = "==0.5.3"
+tornado = "==6.5.1"
+twisted = "==24.11.0"
 txaio = "==23.1.1"
 typing-extensions = "==4.12.2"
 tzdata = "==2025.1"
 uritemplate = "==4.1.1"
 urllib3 = "==2.3.0"
+uvicorn = "==0.34.3"
 vine = "==5.1.0"
 wcwidth = "==0.2.13"
 websockets = "==15.0.1"
+whitenoise = "==6.9.0"
 "zope.interface" = "==7.2"
-python-dotenv = "==1.1.0"
-pytest = "==8.3.5"
-pytest-django = "==4.11.1"
-pytest-factoryboy = "==2.7.0"
-pytest-mock = "==3.14.0"
-django-ratelimit = "==4.1.0"
-django-redis = "==5.4.0"
-flower = "==2.0.1"
-django-celery-beat = "==2.8.1"
-dj-database-url = "==2.3.0"
-dnspython = "==2.7.0"
-django-db-geventpool = "==4.0.8"
-psycogreen = "==1.0.2"
-cloudinary = "==1.44.0"
-django-cloudinary-storage = "==0.3.0"
-boto3 = "==1.38.23"
-django-storages = "==1.14.6"
-gunicorn = "==23.0.0"
-channels-redis = "==4.2.1"
-twisted = "==24.11.0"
-uvicorn = "*"
-whitenoise = "*"
-botocore = "==1.38.23"
-cron-descriptor = "==1.4.5"
-django-timezone-field = "==7.1"
-factory-boy = "==3.3.3"
-faker = "==37.3.0"
-h2 = "==4.2.0"
-hpack = "==4.1.0"
-humanize = "==4.12.3"
-hyperframe = "==6.1.0"
-iniconfig = "==2.1.0"
-jmespath = "==1.0.1"
-msgpack = "==1.1.0"
-packaging = "==25.0"
-pluggy = "==1.6.0"
-priority = "==1.3.0"
-prometheus-client = "==0.22.0"
-python-crontab = "==3.2.0"
-pytz = "==2025.2"
-s3transfer = "==0.13.0"
-tornado = "==6.5.1"
-drf-yasg = "*"
+django = "*"
 
 [dev-packages]
 
