--- a/requirements.txt
+++ b/requirements.txt
@@ -1,114 +1,115 @@
-amqp==5.3.1
-asgiref==3.8.1
-attrs==25.3.0
-autobahn==24.4.2
-Automat==24.8.1
-billiard==4.2.1
-boto3==1.38.23
-botocore==1.38.23
-celery==5.4.0
-certifi==2025.4.26
-cffi==1.17.1
-channels==4.2.2
-channels_redis==4.2.1
-charset-normalizer==3.4.1
-click==8.1.8
-click-didyoumean==0.3.1
+-i https://pypi.org/simple
+amqp==5.3.1; python_version >= '3.6'
+asgiref==3.8.1; python_version >= '3.8'
+attrs==25.3.0; python_version >= '3.8'
+autobahn==24.4.2; python_version >= '3.9'
+automat==24.8.1; python_version >= '3.8'
+billiard==4.2.1; python_version >= '3.7'
+boto3==1.38.23; python_version >= '3.9'
+botocore==1.38.23; python_version >= '3.9'
+celery==5.4.0; python_version >= '3.8'
+certifi==2025.4.26; python_version >= '3.6'
+cffi==1.17.1; python_version >= '3.8'
+channels==4.2.2; python_version >= '3.8'
+channels-redis==4.2.1; python_version >= '3.8'
+charset-normalizer==3.4.1; python_version >= '3.7'
+click==8.1.8; python_version >= '3.7'
+click-didyoumean==0.3.1; python_full_version >= '3.6.2'
 click-plugins==1.1.1
-click-repl==0.3.0
+click-repl==0.3.0; python_version >= '3.6'
 cloudinary==1.44.0
-colorama==0.4.6
-constantly==23.10.4
+colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
+constantly==23.10.4; python_version >= '3.8'
 cron-descriptor==1.4.5
-cryptography==44.0.2
-daphne==4.1.2
-defusedxml==0.7.1
+cryptography==44.0.2; python_version >= '3.7' and python_full_version not in '3.9.0, 3.9.1'
+daphne==4.1.2; python_version >= '3.8'
+defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 dj-database-url==2.3.0
-Django==5.1.7
-django-celery-beat==2.8.1
+django==5.2.3; python_version >= '3.10'
+django-celery-beat==2.8.1; python_version >= '3.8'
 django-cloudinary-storage==0.3.0
-django-cors-headers==4.7.0
+django-cors-headers==4.7.0; python_version >= '3.9'
 django-countries==7.6.1
 django-db-geventpool==4.0.8
-django-debug-toolbar==5.2.0
-django-filter==25.1
-django-ratelimit==4.1.0
-django-redis==5.4.0
-django-storages==1.14.6
+django-debug-toolbar==5.2.0; python_version >= '3.9'
+django-filter==25.1; python_version >= '3.9'
+django-ratelimit==4.1.0; python_version >= '3.7'
+django-redis==5.4.0; python_version >= '3.6'
+django-storages==1.14.6; python_version >= '3.7'
 django-templated-mail==1.1.1
-django-timezone-field==7.1
-djangorestframework==3.16.0
-djangorestframework_simplejwt==5.5.0
-djoser==2.3.1
-dnspython==2.7.0
-drf-spectacular==0.28.0
-drf-yasg==1.21.10
-factory_boy==3.3.3
-Faker==37.3.0
-flower==2.0.1
-gunicorn==23.0.0
-h11==0.14.0
-h2==4.2.0
-hpack==4.1.0
-humanize==4.12.3
-hyperframe==6.1.0
+django-timezone-field==7.1; python_version >= '3.8' and python_version < '4.0'
+djangorestframework==3.16.0; python_version >= '3.9'
+djangorestframework-simplejwt==5.5.0; python_version >= '3.9'
+djoser==2.3.1; python_version >= '3.8' and python_version < '4.0'
+dnspython==2.7.0; python_version >= '3.9'
+drf-spectacular==0.28.0; python_version >= '3.7'
+drf-yasg==1.21.10; python_version >= '3.6'
+factory-boy==3.3.3; python_version >= '3.8'
+faker==37.3.0; python_version >= '3.9'
+flower==2.0.1; python_version >= '3.7'
+gunicorn==23.0.0; python_version >= '3.7'
+h11==0.14.0; python_version >= '3.7'
+h2==4.2.0; python_version >= '3.9'
+hpack==4.1.0; python_version >= '3.9'
+humanize==4.12.3; python_version >= '3.9'
+hyperframe==6.1.0; python_version >= '3.9'
 hyperlink==21.0.0
-idna==3.10
-incremental==24.7.2
-inflection==0.5.1
-iniconfig==2.1.0
-jmespath==1.0.1
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kombu==5.5.0
-msgpack==1.1.0
-oauthlib==3.2.2
-packaging==25.0
-pillow==11.1.0
-pluggy==1.6.0
+idna==3.10; python_version >= '3.6'
+incremental==24.7.2; python_version >= '3.8'
+inflection==0.5.1; python_version >= '3.5'
+iniconfig==2.1.0; python_version >= '3.8'
+jmespath==1.0.1; python_version >= '3.7'
+jsonschema==4.23.0; python_version >= '3.8'
+jsonschema-specifications==2024.10.1; python_version >= '3.9'
+kombu==5.5.0; python_version >= '3.8'
+msgpack==1.1.0; python_version >= '3.8'
+oauthlib==3.2.2; python_version >= '3.6'
+packaging==25.0; python_version >= '3.8'
+pillow==11.1.0; python_version >= '3.9'
+pluggy==1.6.0; python_version >= '3.9'
 priority==1.3.0
-prometheus_client==0.22.0
-prompt_toolkit==3.0.50
+prometheus-client==0.22.0; python_version >= '3.9'
+prompt-toolkit==3.0.50; python_full_version >= '3.8.0'
 psycogreen==1.0.2
-psycopg==3.2.9
-psycopg2-binary==2.9.10
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-PyJWT==2.9.0
-pyOpenSSL==25.0.0
-pytest==8.3.5
-pytest-django==4.11.1
-pytest-factoryboy==2.7.0
-pytest-mock==3.14.0
+psycopg==3.2.9; python_version >= '3.8'
+psycopg2-binary==2.9.10; python_version >= '3.8'
+pyasn1==0.6.1; python_version >= '3.8'
+pyasn1-modules==0.4.1; python_version >= '3.8'
+pycparser==2.22; python_version >= '3.8'
+pyjwt==2.9.0; python_version >= '3.8'
+pyopenssl==25.0.0; python_version >= '3.7'
+pytest==8.3.5; python_version >= '3.8'
+pytest-django==4.11.1; python_version >= '3.8'
+pytest-factoryboy==2.7.0; python_version >= '3.8'
+pytest-mock==3.14.0; python_version >= '3.8'
 python-crontab==3.2.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+python-dotenv==1.1.0; python_version >= '3.9'
 python3-openid==3.2.0
 pytz==2025.2
-PyYAML==6.0.2
-redis==6.1.0
-referencing==0.36.2
-requests==2.32.3
-requests-oauthlib==2.0.0
-rpds-py==0.23.1
-s3transfer==0.13.0
-service-identity==24.2.0
-setuptools==80.9.0
-six==1.17.0
-social-auth-app-django==5.4.3
-social-auth-core==4.5.6
-sqlparse==0.5.3
-tornado==6.5.1
-Twisted==24.11.0
-txaio==23.1.1
-typing_extensions==4.12.2
-tzdata==2025.1
-uritemplate==4.1.1
-urllib3==2.3.0
-uvicorn==0.34.3
-vine==5.1.0
+pyyaml==6.0.2; python_version >= '3.8'
+redis==6.1.0; python_version >= '3.8'
+referencing==0.36.2; python_version >= '3.9'
+requests==2.32.3; python_version >= '3.8'
+requests-oauthlib==2.0.0; python_version >= '3.4'
+rpds-py==0.23.1; python_version >= '3.9'
+s3transfer==0.13.0; python_version >= '3.9'
+service-identity==24.2.0; python_version >= '3.8'
+setuptools==80.9.0; python_version >= '3.9'
+six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+social-auth-app-django==5.4.3; python_version >= '3.9'
+social-auth-core==4.5.6; python_version >= '3.9'
+sqlparse==0.5.3; python_version >= '3.8'
+tornado==6.5.1; python_version >= '3.9'
+twisted[tls]==24.11.0; python_full_version >= '3.8.0'
+txaio==23.1.1; python_version >= '3.7'
+typing-extensions==4.12.2; python_version >= '3.8'
+tzdata==2025.1; python_version >= '2'
+uritemplate==4.1.1; python_version >= '3.6'
+urllib3==2.3.0; python_version >= '3.9'
+uvicorn==0.34.3; python_version >= '3.9'
+vine==5.1.0; python_version >= '3.6'
 wcwidth==0.2.13
-websockets==15.0.1
-whitenoise==6.9.0
-zope.interface==7.2
+websockets==15.0.1; python_version >= '3.9'
+whitenoise==6.9.0; python_version >= '3.9'
+zope.interface==7.2; python_version >= '3.8'
