--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,6 @@ automat = "==24.8.1"
 billiard = "==4.2.1"
 boto3 = "==1.38.23"
 botocore = "==1.38.23"
-celery = "==5.4.0"
 certifi = "==2025.4.26"
 cffi = "==1.17.1"
 channels = "==4.2.2"
@@ -30,7 +29,6 @@ cryptography = "==44.0.2"
 daphne = "==4.1.2"
 defusedxml = "==0.7.1"
 dj-database-url = "==2.3.0"
-django-celery-beat = "==2.8.1"
 django-cloudinary-storage = "==0.3.0"
 django-cors-headers = "==4.7.0"
 django-countries = "==7.6.1"
@@ -50,7 +48,6 @@ drf-spectacular = "==0.28.0"
 drf-yasg = "==1.21.10"
 factory-boy = "==3.3.3"
 faker = "==37.3.0"
-flower = "==2.0.1"
 gunicorn = "==23.0.0"
 h11 = "==0.14.0"
 h2 = "==4.2.0"
@@ -117,6 +114,11 @@ websockets = "==15.0.1"
 whitenoise = "==6.9.0"
 "zope.interface" = "==7.2"
 django = "*"
+django-rq = "*"
+rq = "*"
+rq-scheduler = "*"
+django-rq-dashboard = "*"
+rq-dashboard = "*"
 
 [dev-packages]
 
