--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 -i https://pypi.org/simple
 amqp==5.3.1; python_version >= '3.6'
+arrow==1.3.0; python_version >= '3.8'
 asgiref==3.8.1; python_version >= '3.8'
 attrs==25.3.0; python_version >= '3.8'
 autobahn==24.4.2; python_version >= '3.9'
 automat==24.8.1; python_version >= '3.8'
 billiard==4.2.1; python_version >= '3.7'
+blinker==1.9.0; python_version >= '3.9'
 boto3==1.38.23; python_version >= '3.9'
 botocore==1.38.23; python_version >= '3.9'
-celery==5.4.0; python_version >= '3.8'
 certifi==2025.4.26; python_version >= '3.6'
 cffi==1.17.1; python_version >= '3.8'
 channels==4.2.2; python_version >= '3.8'
@@ -21,12 +22,12 @@ cloudinary==1.44.0
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 constantly==23.10.4; python_version >= '3.8'
 cron-descriptor==1.4.5
+crontab==1.0.4
 cryptography==44.0.2; python_version >= '3.7' and python_full_version not in '3.9.0, 3.9.1'
 daphne==4.1.2; python_version >= '3.8'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 dj-database-url==2.3.0
 django==5.2.3; python_version >= '3.10'
-django-celery-beat==2.8.1; python_version >= '3.8'
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.7.0; python_version >= '3.9'
 django-countries==7.6.1
@@ -35,6 +36,8 @@ django-debug-toolbar==5.2.0; python_version >= '3.9'
 django-filter==25.1; python_version >= '3.9'
 django-ratelimit==4.1.0; python_version >= '3.7'
 django-redis==5.4.0; python_version >= '3.6'
+django-rq==3.0.1
+django-rq-dashboard==0.3.3
 django-storages==1.14.6; python_version >= '3.7'
 django-templated-mail==1.1.1
 django-timezone-field==7.1; python_version >= '3.8' and python_version < '4.0'
@@ -46,7 +49,8 @@ drf-spectacular==0.28.0; python_version >= '3.7'
 drf-yasg==1.21.10; python_version >= '3.6'
 factory-boy==3.3.3; python_version >= '3.8'
 faker==37.3.0; python_version >= '3.9'
-flower==2.0.1; python_version >= '3.7'
+flask==3.1.1; python_version >= '3.9'
+freezegun==1.5.2; python_version >= '3.8'
 gunicorn==23.0.0; python_version >= '3.7'
 h11==0.14.0; python_version >= '3.7'
 h2==4.2.0; python_version >= '3.9'
@@ -58,10 +62,13 @@ idna==3.10; python_version >= '3.6'
 incremental==24.7.2; python_version >= '3.8'
 inflection==0.5.1; python_version >= '3.5'
 iniconfig==2.1.0; python_version >= '3.8'
+itsdangerous==2.2.0; python_version >= '3.8'
+jinja2==3.1.6; python_version >= '3.7'
 jmespath==1.0.1; python_version >= '3.7'
 jsonschema==4.23.0; python_version >= '3.8'
 jsonschema-specifications==2024.10.1; python_version >= '3.9'
 kombu==5.5.0; python_version >= '3.8'
+markupsafe==3.0.2; python_version >= '3.9'
 msgpack==1.1.0; python_version >= '3.8'
 oauthlib==3.2.2; python_version >= '3.6'
 packaging==25.0; python_version >= '3.8'
@@ -89,10 +96,14 @@ python3-openid==3.2.0
 pytz==2025.2
 pyyaml==6.0.2; python_version >= '3.8'
 redis==6.1.0; python_version >= '3.8'
+redis-sentinel-url==1.0.1
 referencing==0.36.2; python_version >= '3.9'
 requests==2.32.3; python_version >= '3.8'
 requests-oauthlib==2.0.0; python_version >= '3.4'
 rpds-py==0.23.1; python_version >= '3.9'
+rq==2.4.0; python_version >= '3.9'
+rq-dashboard==0.8.3.2
+rq-scheduler==0.14.0
 s3transfer==0.13.0; python_version >= '3.9'
 service-identity==24.2.0; python_version >= '3.8'
 setuptools==80.9.0; python_version >= '3.9'
@@ -103,6 +114,7 @@ sqlparse==0.5.3; python_version >= '3.8'
 tornado==6.5.1; python_version >= '3.9'
 twisted[tls]==24.11.0; python_full_version >= '3.8.0'
 txaio==23.1.1; python_version >= '3.7'
+types-python-dateutil==2.9.0.20250516; python_version >= '3.9'
 typing-extensions==4.12.2; python_version >= '3.8'
 tzdata==2025.1; python_version >= '2'
 uritemplate==4.1.1; python_version >= '3.6'
@@ -111,5 +123,6 @@ uvicorn==0.34.3; python_version >= '3.9'
 vine==5.1.0; python_version >= '3.6'
 wcwidth==0.2.13
 websockets==15.0.1; python_version >= '3.9'
+werkzeug==3.1.3; python_version >= '3.9'
 whitenoise==6.9.0; python_version >= '3.9'
 zope.interface==7.2; python_version >= '3.8'
