user verification via telegram bot and made file uploads through a telegram bot

--- a/Pipfile
+++ b/Pipfile
@@ -119,6 +119,8 @@ rq = "*"
 rq-scheduler = "*"
 django-rq-dashboard = "*"
 rq-dashboard = "*"
+nest-asyncio = "*"
+python-telegram-bot = "*"
 
 [dev-packages]
 
