--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 -i https://pypi.org/simple
 amqp==5.3.1; python_version >= '3.6'
+anyio==4.9.0; python_version >= '3.9'
 arrow==1.3.0; python_version >= '3.8'
 asgiref==3.8.1; python_version >= '3.8'
 attrs==25.3.0; python_version >= '3.8'
@@ -55,6 +56,8 @@ gunicorn==23.0.0; python_version >= '3.7'
 h11==0.14.0; python_version >= '3.7'
 h2==4.2.0; python_version >= '3.9'
 hpack==4.1.0; python_version >= '3.9'
+httpcore==1.0.8; python_version >= '3.8'
+httpx==0.28.1; python_version >= '3.8'
 humanize==4.12.3; python_version >= '3.9'
 hyperframe==6.1.0; python_version >= '3.9'
 hyperlink==21.0.0
@@ -70,6 +73,7 @@ jsonschema-specifications==2024.10.1; python_version >= '3.9'
 kombu==5.5.0; python_version >= '3.8'
 markupsafe==3.0.2; python_version >= '3.9'
 msgpack==1.1.0; python_version >= '3.8'
+nest-asyncio==1.6.0; python_version >= '3.5'
 oauthlib==3.2.2; python_version >= '3.6'
 packaging==25.0; python_version >= '3.8'
 pillow==11.1.0; python_version >= '3.9'
@@ -92,6 +96,7 @@ pytest-mock==3.14.0; python_version >= '3.8'
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 python-dotenv==1.1.0; python_version >= '3.9'
+python-telegram-bot==22.2; python_version >= '3.9'
 python3-openid==3.2.0
 pytz==2025.2
 pyyaml==6.0.2; python_version >= '3.8'
@@ -108,6 +113,7 @@ s3transfer==0.13.0; python_version >= '3.9'
 service-identity==24.2.0; python_version >= '3.8'
 setuptools==80.9.0; python_version >= '3.9'
 six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+sniffio==1.3.1; python_version >= '3.7'
 social-auth-app-django==5.4.3; python_version >= '3.9'
 social-auth-core==4.5.6; python_version >= '3.9'
 sqlparse==0.5.3; python_version >= '3.8'
