--- a/Pipfile
+++ b/Pipfile
@@ -101,7 +101,6 @@ social-auth-app-django = "==5.4.3"
 social-auth-core = "==4.5.6"
 sqlparse = "==0.5.3"
 tornado = "==6.5.1"
-twisted = "==24.11.0"
 txaio = "==23.1.1"
 typing-extensions = "==4.12.2"
 tzdata = "==2025.1"
@@ -113,14 +112,30 @@ wcwidth = "==0.2.13"
 websockets = "==15.0.1"
 whitenoise = "==6.9.0"
 "zope.interface" = "==7.2"
-django = "*"
-django-rq = "*"
-rq = "*"
-rq-scheduler = "*"
-django-rq-dashboard = "*"
-rq-dashboard = "*"
-nest-asyncio = "*"
-python-telegram-bot = "*"
+django = "==5.2.3"
+django-rq = "==3.0.1"
+rq = "==2.4.0"
+rq-scheduler = "==0.14.0"
+django-rq-dashboard = "==0.3.3"
+rq-dashboard = "==0.8.3.2"
+nest-asyncio = "==1.6.0"
+python-telegram-bot = "==22.2"
+anyio = "==4.9.0"
+arrow = "==1.3.0"
+blinker = "==1.9.0"
+crontab = "==1.0.4"
+flask = "==3.1.1"
+freezegun = "==1.5.2"
+httpcore = "==1.0.8"
+httpx = "==0.28.1"
+itsdangerous = "==2.2.0"
+jinja2 = "==3.1.6"
+markupsafe = "==3.0.2"
+redis-sentinel-url = "==1.0.1"
+sniffio = "==1.3.1"
+twisted = {extras = ["tls"], version = "==24.11.0"}
+types-python-dateutil = "==2.9.0.20250516"
+werkzeug = "==3.1.3"
 
 [dev-packages]
 
