--- a/requirements.txt
+++ b/requirements.txt
@@ -94,7 +94,7 @@ pytest-django==4.11.1; python_version >= '3.8'
 pytest-factoryboy==2.7.0; python_version >= '3.8'
 pytest-mock==3.14.0; python_version >= '3.8'
 python-crontab==3.2.0
-python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.1.0; python_version >= '3.9'
 python-telegram-bot==22.2; python_version >= '3.9'
 python3-openid==3.2.0
@@ -112,7 +112,7 @@ rq-scheduler==0.14.0
 s3transfer==0.13.0; python_version >= '3.9'
 service-identity==24.2.0; python_version >= '3.8'
 setuptools==80.9.0; python_version >= '3.9'
-six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.1; python_version >= '3.7'
 social-auth-app-django==5.4.3; python_version >= '3.9'
 social-auth-core==4.5.6; python_version >= '3.9'
