--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - .:/app
     env_file:
       - .env
+    networks: ["shared"]
+
 
   rqworker:
     build: .
@@ -18,6 +20,7 @@ services:
       - .:/app
     env_file:
       - .env
+    networks: ["shared"]
 
   rqscheduler:
     build: .
@@ -26,6 +29,7 @@ services:
       - .:/app
     env_file:
       - .env
+    networks: ["shared"]
 
   # Telegram Bot 1
   telegram_bot_1:
@@ -46,3 +50,8 @@ services:
     env_file:
       - .env
     restart: unless-stopped
+
+
+networks:
+  shared:
+    external: true   # create once
