--- a/Pipfile
+++ b/Pipfile
@@ -136,6 +136,7 @@ sniffio = "==1.3.1"
 twisted = {extras = ["tls"], version = "==24.11.0"}
 types-python-dateutil = "==2.9.0.20250516"
 werkzeug = "==3.1.3"
+drf-nested-routers = "*"
 
 [dev-packages]
 
