updated requirements and added captcha validation for student users when registering

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ billiard==4.2.1; python_version >= '3.7'
 blinker==1.9.0; python_version >= '3.9'
 boto3==1.38.23; python_version >= '3.9'
 botocore==1.38.23; python_version >= '3.9'
+captcha==0.7.1; python_version >= '3.8'
 certifi==2025.4.26; python_version >= '3.6'
 cffi==1.17.1; python_version >= '3.8'
 channels==4.2.2; python_version >= '3.8'
@@ -46,6 +47,7 @@ djangorestframework==3.16.0; python_version >= '3.9'
 djangorestframework-simplejwt==5.5.0; python_version >= '3.9'
 djoser==2.3.1; python_version >= '3.8' and python_version < '4.0'
 dnspython==2.7.0; python_version >= '3.9'
+drf-nested-routers==0.94.2; python_version >= '3.8'
 drf-spectacular==0.28.0; python_version >= '3.7'
 drf-yasg==1.21.10; python_version >= '3.6'
 factory-boy==3.3.3; python_version >= '3.8'
