--- a/Pipfile
+++ b/Pipfile
@@ -137,6 +137,7 @@ twisted = {extras = ["tls"], version = "==24.11.0"}
 types-python-dateutil = "==2.9.0.20250516"
 werkzeug = "==3.1.3"
 drf-nested-routers = "*"
+captcha = "*"
 
 [dev-packages]
 
