--- a/Pipfile
+++ b/Pipfile
@@ -138,6 +138,7 @@ types-python-dateutil = "==2.9.0.20250516"
 werkzeug = "==3.1.3"
 drf-nested-routers = "*"
 captcha = "*"
+qrcode = "*"
 
 [dev-packages]
 
