--- a/requirements.txt
+++ b/requirements.txt
@@ -102,6 +102,7 @@ python-telegram-bot==22.2; python_version >= '3.9'
 python3-openid==3.2.0
 pytz==2025.2
 pyyaml==6.0.2; python_version >= '3.8'
+qrcode==8.2; python_version >= '3.9' and python_version < '4.0'
 redis==6.1.0; python_version >= '3.8'
 redis-sentinel-url==1.0.1
 referencing==0.36.2; python_version >= '3.9'
