--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ cloudinary==1.44.0
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 constantly==23.10.4; python_version >= '3.8'
 cron-descriptor==1.4.5
+openpyxl==3.1.5; python_version >= '3.9'
 crontab==1.0.4
 cryptography==44.0.2; python_version >= '3.7' and python_full_version not in '3.9.0, 3.9.1'
 daphne==4.1.2; python_version >= '3.8'
